--- a/index.html
+++ b/index.html
@@ -28,11 +28,20 @@
    <main>
 
     <div class="container">
-        <div class="gamescontainer">
+       
             <div class="games">
 
+                <div class="game"></div>
+                <div class="game"></div>
+                <div class="game"></div>
+                <div class="game"></div>
+                <div class="game"></div>
+                <div class="game"></div>
+                <div class="game"></div>
+                <div class="game"></div>
+
             </div>
-        </div>
+        
     </div>
 
    </main>
