--- a/index.html
+++ b/index.html
@@ -31,15 +31,46 @@
        
             <div class="games">
 
-                <div class="game"></div>
-                <div class="game"></div>
-                <div class="game"></div>
-                <div class="game"></div>
-                <div class="game"></div>
-                <div class="game"></div>
-                <div class="game"></div>
-                <div class="game"></div>
-
+                <div class="game">
+                    <img src="İmg/-K8XvV0Z_400x400.jpg">
+                    <a  class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/-K8XvV0Z_400x400.jpg">
+                    <a  class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/-K8XvV0Z_400x400.jpg">
+                    <a  class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/-K8XvV0Z_400x400.jpg">
+                    <a  class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/-K8XvV0Z_400x400.jpg">
+                    <a  class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/-K8XvV0Z_400x400.jpg">
+                    <a  class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/-K8XvV0Z_400x400.jpg">
+                    <a  class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/-K8XvV0Z_400x400.jpg">
+                    <a  class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/-K8XvV0Z_400x400.jpg">
+                    <a  class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/-K8XvV0Z_400x400.jpg">
+                    <a  class="Buy" href="#">Sepete ekle</a>
+                </div>
             </div>
         
     </div>
