Javascript dosyaları güncellendi

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
        <a href="#">
         <img class="shoppingb" src="/İmg/app icon.jpeg">
-        <span class="info">1</span>
+        <span class="info"></span>
         <span class="Buytext">Satın al</span>
        </a>
     </header>
@@ -32,44 +32,44 @@
             <div class="games">
 
                 <div class="game">
-                    <img src="İmg/-K8XvV0Z_400x400.jpg">
-                    <a  class="Buy" href="#">Sepete ekle</a>
+                    <img src="İmg/1500x500 (1).jpeg">
+                    <a  id="pcpes2018" class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/1500x500 (2).jpeg">
+                    <a   id="pcfrostpunk2" class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/1500x500.jpeg">
+                    <a  id="pcbannerlord"  class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/GAlso7OWUAAkZPk.jpeg">
+                    <a  id="pcGta6" class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/GmgJrMmd_400x400.png">
+                    <a   id="pccyberpunk" class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/GJNymz3XcAAxbze.jpeg">
+                    <a  id="pcageofempires" class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/maxresdefault.jpg">
+                    <a  id="pcneedforspeedmostwanted"class="Buy" href="#">Sepete ekle</a>
+                </div>
+                <div class="game">
+                    <img src="İmg/ss_e040f74641ac21f15e3ec7c2415fc8b4de0b6bf9.600x338.jpg">
+                    <a  id="pceurotrucksimulator" class="Buy" href="#">Sepete ekle</a>
                 </div>
                 <div class="game">
                     <img src="İmg/-K8XvV0Z_400x400.jpg">
-                    <a  class="Buy" href="#">Sepete ekle</a>
+                    <a   id="pcfifa" class="Buy" href="#">Sepete ekle</a>
                 </div>
                 <div class="game">
-                    <img src="İmg/-K8XvV0Z_400x400.jpg">
-                    <a  class="Buy" href="#">Sepete ekle</a>
-                </div>
-                <div class="game">
-                    <img src="İmg/-K8XvV0Z_400x400.jpg">
-                    <a  class="Buy" href="#">Sepete ekle</a>
-                </div>
-                <div class="game">
-                    <img src="İmg/-K8XvV0Z_400x400.jpg">
-                    <a  class="Buy" href="#">Sepete ekle</a>
-                </div>
-                <div class="game">
-                    <img src="İmg/-K8XvV0Z_400x400.jpg">
-                    <a  class="Buy" href="#">Sepete ekle</a>
-                </div>
-                <div class="game">
-                    <img src="İmg/-K8XvV0Z_400x400.jpg">
-                    <a  class="Buy" href="#">Sepete ekle</a>
-                </div>
-                <div class="game">
-                    <img src="İmg/-K8XvV0Z_400x400.jpg">
-                    <a  class="Buy" href="#">Sepete ekle</a>
-                </div>
-                <div class="game">
-                    <img src="İmg/-K8XvV0Z_400x400.jpg">
-                    <a  class="Buy" href="#">Sepete ekle</a>
-                </div>
-                <div class="game">
-                    <img src="İmg/-K8XvV0Z_400x400.jpg">
-                    <a  class="Buy" href="#">Sepete ekle</a>
+                    <img src="İmg/EGS_GrandTheftAutoSanAndreasTheDefinitiveEdition_RockstarGames_S1_2560x1440-3daa3396c39d5310e071d9093689fdde.jpeg">
+                    <a  id="pcGrandTheftAutoSanAndreas"class="Buy" href="#">Sepete ekle</a>
                 </div>
             </div>
         
